refactor(Graph.java): code optimization